salesforce/force-app/main/default/objects/Compliance_Review__c/Compliance_Review__c.object-meta.xml
<CustomObject>
    <label>Compliance Review</label>
    <pluralLabel>Compliance Reviews</pluralLabel>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Compliance Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>