salesforce/force-app/main/default/objects/Compliance_Review__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Compliance Reviews</relationshipLabel>
    <relationshipName>Compliance_Reviews</relationshipName>
    <type>MasterDetail</type>
</CustomField>