salesforce/force-app/main/default/objects/Compliance_Review__c/fields/AI_Audit_Summary__c.field-meta.xml
<CustomField>
    <fullName>AI_Audit_Summary__c</fullName>
    <label>AI Audit Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>