salesforce/force-app/main/default/objects/Compliance_Review__c/fields/Risk_Status__c.field-meta.xml
<CustomField>
    <fullName>Risk_Status__c</fullName>
    <label>Risk Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Pending Human Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>