salesforce/force-app/main/default/objects/Compliance_Review__c/fields/Security_Score__c.field-meta.xml
<CustomField>
    <fullName>Security_Score__c</fullName>
    <label>Security Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>